--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -7,6 +7,16 @@
 </head>
 
 <body>
-    
+    <div>
+        <h1>PORTFOLIOTRACKER</h1>
+    </div>
+
+    <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#news">Portefølje</a></li>
+        <li><a href="#contact">Aktier</a></li>
+        <li><a href="#about">Konto</a></li>
+        <li><a href="#about">Profil</a></li>
+      </ul>
 </body>
 </html>
