--- a/views/portfolios.ejs
+++ b/views/portfolios.ejs
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfølge Oversigt</title>
+    <link rel="stylesheet" href="portfolios_style.css">
 </head>
+
+<div class="sidebar">
+    <h3>PORTFOLIETRACKER</h3>
+    <p>Dashboard</p>
+    <p>Accounts</p>
+    <p>Portfolios</p>
+
+</div>
+
+<div class="content">
+<h2>Portefølge Oversigt</h2>
+</div>
+
+
+
 <body>
-    
+
 </body>
+
 </html>
