--- a/public/portfolios_style.css
+++ b/public/portfolios_style.css
@@ -6,16 +6,54 @@ body {
     padding: 0;
 }
 .sidebar {
-    width: 200px;
-    background-color: #222;
-    height: 100vh;
-    padding: 20px;
-    position: fixed;
-    top: 0;
-    left: 0;
+    width: 200px; /* Bredden på sidebaren */
+    background-color: #222; /* baggrundsfarven på sidebaren */
+    height: 100vh; /* gør at sidebaren fylder hele højden af skærmen */
+    padding: 20px; /* længden på den korte side */
+    position: fixed; /* gør at sidebaren sidder fast på skærmen, så den ikke bevæger sig når man scroller */
+    top: 0; /* gør at sidebar'en starter helt fra toppen og ikke har et mellemrum over sig */
+    left: 0; /* gør at sidebar'en sidder helt ude i venstre side af skærmen */
 }
 
 .content {
-    margin-left: 220px;
+    margin-left: 380px;
     padding: 20px;
+}
+
+
+
+.tabel {
+    width: 60%;
+    margin: 20px auto;
+    margin-top: 300px; 
+    margin-right: 150px;
+    padding: 20px;
+    background-color: #1e1e1e;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    color: white;
+}
+
+th, td {
+    padding: 15px;
+    text-align: left;
+    border-bottom: 1px solid #333;
+}
+
+th {
+    background-color: #2a2a2a;
+    font-weight: bold;
+}
+
+.green {
+    color: #00ff99;
+}
+
+.red {
+    color: #ff4d4d;
 }
