--- a/views/portfolios.ejs
+++ b/views/portfolios.ejs
@@ -8,21 +8,75 @@
     <link rel="stylesheet" href="portfolios_style.css">
 </head>
 
-<div class="sidebar">
-    <h3>PORTFOLIETRACKER</h3>
-    <p>Dashboard</p>
-    <p>Accounts</p>
-    <p>Portfolios</p>
-
-</div>
-
-<div class="content">
-<h2>Portefølge Oversigt</h2>
-</div>
-
-
-
 <body>
+    <!-- Sidebaren -->
+    <div class="sidebar">
+        <h3>PORTFOLIOTRACKER</h3>
+        <p>Dashboard</p>
+        <p>Accounts</p>
+        <p>Portfolios</p>
+
+    </div>
+
+    <div class="content">
+        <h2>Portefølge Oversigt</h2>
+    </div>
+
+
+
+    <!-- Stor boks i bunden -->
+    <div class="tabel">
+        <table>
+            <thead>
+                <tr>
+                    <th>Portefølje Navn</th>
+                    <th>Bank Account</th>
+                    <th>24h Change</th>
+                    <th>Sidste Handel</th>
+                    <th>Total Value</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>Growth tech</td>
+                    <td>Nordea DK</td>
+                    <td class="green">+1.27%</td>
+                    <td>01/02/2024 12:54</td>
+                    <td>35.201 DKK</td>
+                </tr>
+                <tr>
+                    <td>Tech Leaders</td>
+                    <td>Nordea DK</td>
+                    <td class="red">-1.21%</td>
+                    <td>25/04/2024 14:14</td>
+                    <td>11.000 DKK</td>
+                </tr>
+                <tr>
+                    <td>ETF +</td>
+                    <td>Danske Invest 2</td>
+                    <td class="red">-2.13%</td>
+                    <td>23/04/2024 12:11</td>
+                    <td>7.584 DKK</td>
+                </tr>
+                <tr>
+                    <td>Space & Defence</td>
+                    <td>Danske Invest 2</td>
+                    <td class="green">+0.10%</td>
+                    <td>27/03/2024 20:14</td>
+                    <td>6.842 DKK</td>
+                </tr>
+                <tr>
+                    <td>E-Com</td>
+                    <td>Danske Invest 3</td>
+                    <td class="green">+0.32%</td>
+                    <td>02/03/2024 12:51</td>
+                    <td>6.500 DKK</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
 
 </body>
 
