login og setup rettelser

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,16 +6,19 @@
       <link rel="stylesheet" href="index_style.css">
    </head>
    <body>
+      <br><br>
       <h1>PortfolioTracker</h1>
       <h3>Investeringsplatformen for studerende</h3>
 
+      <br><br>
+
       <div class="wrapper">
          <div class="title">
-            Login Form
+            Login
          </div>
          <form action="#">
             <div class="field">
-               <label>Email Address</label>
+               <label>Email Adresse</label>
                <input type="text" required>
             </div>
             <div class="field">
@@ -27,7 +30,7 @@
                <input type="submit" value="Login">
             </div>
             <div class="signup-link">
-               Not a member? <a href="#">Signup now</a>
+               Ikke oprettet endnu? <a href="signup.ejs">Opret konto</a>
             </div>
          </form>
       </div>
