--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfoliotracker - Dashboard</title>
-    <link rel="stylesheet" href="public\style.css">
+    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 <body>
@@ -13,11 +14,11 @@
     </div>
 
     <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#news">Portefølje</a></li>
-        <li><a href="#contact">Aktier</a></li>
-        <li><a href="#about">Konto</a></li>
-        <li><a href="#about">Profil</a></li>
+        <li><a href="#home"><span class="material-symbols-outlined">dashboard</span></a></li>
+        <li><a href="#news"><span class="material-symbols-outlined">folder_open</span></a></li>
+        <li><a href="#contact"><span class="material-symbols-outlined">query_stats</span></a></li>
+        <li><a href="#about"><span class="material-symbols-outlined">account_balance_wallet</span></a></li>
+        <li><a href="#about"><span class="material-symbols-outlined">person</span></a></li>
       </ul>
 </body>
 </html>
