--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -20,5 +20,18 @@
         <li><a href="#about"><span class="material-symbols-outlined">account_balance_wallet</span></a></li>
         <li><a href="#about"><span class="material-symbols-outlined">person</span></a></li>
       </ul>
+
+      <div id="realiseret_gevinst_box_id">
+        <font>realiseret gevinst</font>
+      </div>
+      <div id="fem_værdifulde_værdipapirer_box">
+        <font>5 mest værdifulde værdipapirer på tværs af porteføljer</font>
+      </div>
+      <div id="urealiseret_gevinst_box_id">
+        <font>urealiseret gevinst</font>
+      </div>
+      <div id="fem_værdifulde_værdipapirer_urealiseret_box">
+        <font>5 mest urealiseret værdifulde værdipapirer på tværs af porteføljer</font>
+      </div>
 </body>
 </html>
