login, signup og index adskillelse

--- a/public/index_style.css
+++ b/public/index_style.css
@@ -1,79 +1,16 @@
 *{
   margin: 0;
   padding: 0;
-  box-sizing: border-box; /* Sikrer, at padding og border inkluderes i elementets samlede bredde og højde */
   font-family: 'Poppins', sans-serif; /* Anvender Poppins-skrifttypen til alle elementer */
 }
 html,body{
   height: 100%; /* Sætter højden til 100% af viewporten */
   width: 100%; /* Sætter bredden til 100% af viewporten */
   place-items: center; /* Centrerer indholdet både horisontalt og vertikalt */
-  background-image: url('https://img.freepik.com/free-vector/graph-chart-with-moving-up-arrow-stock-market-financial-investment-diagram-blue-background_56104-1814.jpg?t=st=1742655646~exp=1742659246~hmac=68fa7e3b6107d36df89202fd13e14a3046d9646d7dca66d56a802a7350ba0264&w=2000');
+  background-image: url('https://img.freepik.com/free-photo/cropped-image-businessman-sitting-by-table-cafe-analyzing-indicators_171337-5597.jpg?t=st=1743000107~exp=1743003707~hmac=8703b409c731222b26aa6fa2f7c6b5885703ff8da3fde83e9b018283afd751cc&w=2000'); /* Sætter baggrundsbilledet */
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-}
-.wrapper{ /* Styler det hele */
-  width: 380px; /* Sætter bredden på wrapperen */
-  background: white; /* Sætter baggrundsfarven til hvid */
-  border-radius: 15px; /* Afrunder hjørnerne */
-  border: 2px solid #4158d0; /* Tilføjer en blå kant */
-}
-.wrapper .title{ /* Styler overskriften */
-  font-size: 35px; /* Sætter skriftstørrelsen */
-  font-weight: 600; /* Sætter skriftvægten */
-  text-align: center; /* Centrerer teksten */
-  line-height: 100px; /* Sætter linjehøjden */
-  color: white; /* Sætter tekstfarven til hvid */
-  border-radius: 15px 15px 0 0; /* Afrunder de øverste hjørner */
-  background: #4158d0; /* Sætter baggrundsfarven i titelfeltet */
-}
-.wrapper form{ /* Styler formularen */
-  padding: 10px 30px 50px 30px; /* Tilføjer indvendig afstand */
-}
-.wrapper form .field{ /* Styler feltet */
-  margin-top: 20px; /* Tilføjer topmargen */;
-}
-.wrapper form .field label{ /* Styler labelen */
-  display: block; /* Gør labelen til et blok-element */
-  margin-bottom: 5px; /* Tilføjer bundmargen */
-  color: grey; /* Sætter tekstfarven til grå */
-  font-weight: 400; /* Sætter skriftvægten */
-  font-size: 17px; /* Sætter skriftstørrelsen */
-}
-.wrapper form .field input{ /* Styler inputfeltet */
-  height: 50px; /* Sætter højden */
-  width: 100%; /* Sætter bredden til 100% */
-  font-size: 17px; /* Sætter skriftstørrelsen */
-  padding-left: 20px; /* Tilføjer venstre indrykning */
-  border: 1px solid lightgrey; /* Tilføjer en lys grå kant */
-  border-radius: 25px; /* Afrunder hjørnerne */
-}
-.wrapper form .field input:focus,
-form .field input:valid{
-  border-color: #4158d0; /* Ændrer kantfarven ved fokus eller gyldig input */
-}
-form .field input[type="submit"]{
-  color: white; /* Sætter tekstfarven til hvid */
-  border: none; /* Fjerner kanten */
-  padding-left: 0; /* Fjerner venstre indrykning */
-  margin-top: -10px; /* Tilføjer negativ topmargen for at sætte den tættere på */ 
-  font-size: 20px; /* Sætter skriftstørrelsen */
-  font-weight: 500; /* Sætter skriftvægten */
-  cursor: pointer; /* Ændrer cursoren til en pointer ved hovering over knappen */
-  background: #4158d0; /* Sætter baggrundsfarven*/
-}
-form .signup-link{
-  color: #262626; /* Sætter tekstfarven */
-  margin-top: 20px; /* Tilføjer topmargen */
-  text-align: center; /* Centrerer teksten */
-}
-form .signup-link a{
-  color: #4158d0; /* Sætter linkfarven */
-  text-decoration: none; /* Fjerner understregning */
-}
-form .signup-link a:hover{
-  text-decoration: underline; /* Tilføjer understregning ved hover */
 }
 
 /*/kode til overskriften */
@@ -93,4 +30,27 @@ h3 {
   width: 90%; /* Sætter bredden til 90% */
   margin: 0;
   padding: 0;
+}
+
+.top-right-buttons {
+  position: absolute; /* Gør det muligt at placere elementet relativt til skærmen */
+  top: 20px; /* Placerer det 20px fra toppen */
+  right: 20px; /* Placerer det 20px fra højre */
+  display: flex; /* Gør det muligt at placere knapperne side om side */
+  gap: 10px; /* Tilføjer afstand mellem knapperne */
+}
+
+.top-right-buttons .button {
+  text-decoration: none; /* Fjerner understregning fra links */
+  background-color: #4158d0; /* Sætter baggrundsfarven */
+  color: white; /* Sætter tekstfarven */
+  padding: 10px 20px; /* Tilføjer indvendig afstand */
+  border-radius: 5px; /* Afrunder hjørnerne */
+  font-size: 16px; /* Sætter skriftstørrelsen */
+  font-weight: 500; /* Sætter skriftvægten */
+  transition: background-color 0.3s ease; /* Tilføjer en overgangseffekt */
+}
+
+.top-right-buttons .button:hover {
+  background-color: #2a3b8f; /* Ændrer baggrundsfarven ved hover */
 }
