--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,27 +12,11 @@
 
       <br><br>
 
-      <div class="wrapper">
-         <div class="title">
-            Login
-         </div>
-         <form action="#">
-            <div class="field">
-               <label>Email Adresse</label>
-               <input type="text" required>
-            </div>
-            <div class="field">
-               <label>Password</label>
-               <input type="password" required>
-               
-            </div>
-            <div class="field">
-               <input type="submit" value="Login">
-            </div>
-            <div class="signup-link">
-               Ikke oprettet endnu? <a href="signup.ejs">Opret konto</a>
-            </div>
-         </form>
-      </div>
+      <div class="top-right-buttons">
+         <a href="login" class="button">Login</a>
+         <a href="signup" class="button">Opret Konto</a>
+       </div>
+
+      
    </body>
 </html>
