--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,30 +3,30 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Registration or Sign Up form in HTML CSS | CodingLab </title> 
-    <link rel="stylesheet" href="signup_style.css">
+    <title>Opret Konto</title> 
+    <link rel="stylesheet" href="signup_style.css"> <!-- Linker til en ekstern CSS-fil for at style signup-siden -->
    </head>
 <body>
   <div class="wrapper">
     <h2>Opret Konto</h2>
     <form action="#">
       <div class="input-box">
-        <input type="text" placeholder="Enter your name" required>
+        <input type="text" placeholder="Vælg dit brugernavn" required>
       </div>
       <div class="input-box">
-        <input type="text" placeholder="Enter your email" required>
+        <input type="text" placeholder="Skriv din email" required>
       </div>
       <div class="input-box">
-        <input type="password" placeholder="Create password" required>
+        <input type="password" placeholder="Lav et kodeord" required>
       </div>
       <div class="input-box">
-        <input type="password" placeholder="Confirm password" required>
+        <input type="password" placeholder="Bekræft dit kodeord" required>
       </div>
       <div class="input-box button">
-        <input type="Submit" value="Register Now">
+        <input type="Submit" value="Bekræft">
       </div>
       <div class="text">
-        <h3>Har du allerede en konto? <a href="index.ejs">Login her</a></h3>
+        <h3>Har du allerede en konto? <a href="login">Login her</a></h3>
       </div>
     </form>
   </div>
