--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Opret Konto</title> 
-    <link rel="stylesheet" href="signup_style.css"> <!-- Linker til en ekstern CSS-fil for at style signup-siden -->
-   </head>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Opret Konto</title>
+  <link rel="stylesheet" href="signup_style.css"> <!-- Linker til en ekstern CSS-fil for at style signup-siden -->
+</head>
+
 <body>
   <div class="wrapper">
     <h2>Opret Konto</h2>
-    <form action="#">
+    <form action="/signup" method="POST">
       <div class="input-box">
-        <input type="text" placeholder="Vælg dit brugernavn" required>
+        <input type="text" name="username" placeholder="Vælg dit brugernavn" required>
       </div>
       <div class="input-box">
-        <input type="text" placeholder="Skriv din email" required>
+        <input type="text" name="email" placeholder="Skriv din email" required>
       </div>
       <div class="input-box">
-        <input type="password" placeholder="Lav et kodeord" required>
+        <input type="password" name="password" placeholder="Lav et kodeord" required>
       </div>
       <div class="input-box">
-        <input type="password" placeholder="Bekræft dit kodeord" required>
+        <input type="password" name="confirmPassword" placeholder="Bekræft dit kodeord" required>
       </div>
       <div class="input-box button">
-        <input type="Submit" value="Bekræft">
+        <input type="submit" value="Bekræft">
       </div>
       <div class="text">
-        <h3>Har du allerede en konto? <a href="login">Login her</a></h3>
+        <h3>Har du allerede en konto? <a href="/login">Login her</a></h3>
       </div>
     </form>
   </div>
 </body>
+
 </html>
