--- a/views/trade.ejs
+++ b/views/trade.ejs
@@ -24,7 +24,7 @@
       </ul>
 
       <div id="stockBox_id">
-        <input placeholder="Search stock...">
+        <input placeholder="Search stock..." autofocus>
         <div id="boi" style="color: white"></div>
       </div>
 
@@ -73,21 +73,20 @@
 
 <script>
     const stocks = [
-        "AAPL",   // Apple Inc.
-"MSFT",   // Microsoft Corporation
-  "AMZN",   // Amazon.com, Inc.
-  "GOOG",   // Alphabet Inc. (Class C)
-  "GOOGL",  // Alphabet Inc. (Class A)
-  "META",   // Meta Platforms, Inc.
-  "NVDA",   // NVIDIA Corporation
-  "TSLA",   // Tesla, Inc.
-  "INTC",   // Intel Corporation
-  "ADBE",   // Adobe Inc.
-  "NFLX",   // Netflix, Inc.
-  "PYPL",   // PayPal Holdings, Inc.
-  "CSCO",   // Cisco Systems, Inc.
-  "PEP",    // PepsiCo, Inc.
-  "COST",   // Costco Wholesale Corporation
+        "Apple Inc. (AAPL)",   // Apple Inc.
+"Microsoft Corporation, Inc (MSFT)",   // Microsoft Corporation
+  "Amazon.com, Inc. (AMZN)",   // Amazon.com, Inc.
+  "Alphabet, Inc. (GOOG)",   // Alphabet Inc. (Class C)
+  "Meta Platforms, Inc. (META)",   // Meta Platforms, Inc.
+  "Nvidia Corporation (NVDA)",   // NVIDIA Corporation
+  "Tesla, Inc. (TSLA)",   // Tesla, Inc.
+  "Intel Corporation (INTC)",   // Intel Corporation
+  "Adobe, Inc. (ADBE)",   // Adobe Inc.
+  "Netflix, Inc. (NFLX)",   // Netflix, Inc.
+  "PayPal Holdings, Inc. (PYPL)",   // PayPal Holdings, Inc.
+  "Cisco Systems, Inc. (CSCO)",   // Cisco Systems, Inc.
+  "PepsiCo, Inc. (PEP)",    // PepsiCo, Inc.
+  "Costco Wholesale Corporation (COST)",   // Costco Wholesale Corporation
 ];
 
 
