--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -59,7 +59,25 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 
 <script>
-  const xValues = [100,200,300,400,500,600,700,800,900,1000];
+
+
+// Get the current date
+const currentDate = new Date();
+
+// Create an array to hold the dates
+const datesArray = [];
+
+// Loop from 30 days ago up to the current date
+for (let i = 0; i <= 30; i++) {
+    const tempDate = new Date();
+    tempDate.setDate(currentDate.getDate() - i); // Set the date to be `i` days before today
+    datesArray.push(tempDate.toISOString().split('T')[0]); // Add the date to the array in YYYY-MM-DD format
+}
+console.log(datesArray);
+
+const flippedArray = datesArray.reverse();
+
+  const xValues = flippedArray;
   
   new Chart("myChart", 
   {
@@ -67,7 +85,7 @@
     data: {
       labels: xValues,
       datasets: [{
-        data: [100,121,99,143,130,132,129,154,76,100],
+        data: [100,121,99,143,130,132,129,154,76,100,121,99,143,130,132,129,154,76,100,121,99,143,130,132,129,154,76,100,129,154,76],
         borderColor: "blue",
         fill: false
       }]
@@ -136,3 +154,9 @@ new Chart("myChart_pie", {
   }
 });
   </script>
+
+
+
+<script>
+
+</script>
