--- a/public/portfolios_style.css
+++ b/public/portfolios_style.css
@@ -1,10 +1,10 @@
 body {
-    background-color: #121212;
-    color: white;
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
+    background-color: #121212; /* Baggrundsfarve for hele siden */
+    color: white; /* tekstfarve for hele siden */
+    font-family: Arial, sans-serif; /* skrifttype for hele siden  */
+    margin: 0; /* */
+    padding: 0; /* */
+    display: flex; /* */
 }
 .sidebar {
     width: 180px;
@@ -18,18 +18,6 @@ body {
     flex-direction: column;
 }
 
-.sidebar a {
-    color: white;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    border-radius: 5px;
-    margin: 5px 0;
-}
-.sidebar a:hover {
-    background: #333;
-}
 .container {
     margin-left: 240px;
     padding: 20px;
