--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -37,20 +37,20 @@
       <div id="fem_værdifulde_værdipapirer_box">
         <font>5 mest værdifulde værdipapirer på tværs af porteføljer</font>
         <hr>
-        <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
+        <canvas id="myChart" style="width:100%; height: 250px;"></canvas>
       </div>
 
       <div id="urealiseret_gevinst_box_id">
         <font>Fordeling af aktier</font>
         <br>
         <hr>
-        <canvas id="myChart_pie" style="width:100%;max-width:600px"></canvas>
+        <canvas id="myChart_pie" style="width:100%;max-width:600px;"></canvas>
       </div>
 
       <div id="fem_værdifulde_værdipapirer_urealiseret_box">
         <font>5 mest urealiseret værdifulde værdipapirer på tværs af porteføljer</font>
         <hr>
-        <canvas id="myChart2" style="width:100%;max-width:600px"></canvas>
+        <canvas id="myChart2" style="width:100%; height: 250px;"></canvas>
       </div>
       </div>
 </body>
@@ -92,7 +92,10 @@ const flippedArray = datesArray.reverse();
     },
     options: 
     {
-      legend: {display: false}
+      legend: {display: false,
+        maintainAspectRatio: false
+      }
+      
     }
   });
 
