--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -19,7 +19,7 @@
         <input type="text" name="email" placeholder="Skriv din email" required>
       </div>
       <div class="input-box">
-        <input type="password" name="password" placeholder="Lav et kodeord" required>
+        <input type="password" name="password" placeholder="Opret kodeord" required>
       </div>
       <div class="input-box">
         <input type="password" name="confirmPassword" placeholder="Bekræft dit kodeord" required>
