--- a/views/trade.ejs
+++ b/views/trade.ejs
@@ -16,11 +16,11 @@
     </div>
 
     <ul>
-        <li><a href="/dashboard"><span class="material-symbols-outlined">dashboard</span></a></li>
-        <li><a href="/portfolios"><span class="material-symbols-outlined">folder_open</span></a></li>
-        <li><a href="/trade"><span class="material-symbols-outlined" style="color: gray;">query_stats</span></a></li>
-        <li><a href="/accounts"><span class="material-symbols-outlined">account_balance_wallet</span></a></li>
-        <li><a href="#about"><span class="material-symbols-outlined">person</span></a></li>
+        <li><a href="/dashboard" style="color: gray;"><span class="material-symbols-outlined" style="color: gray;">dashboard</span>Dashboard</a></li>
+        <li><a href="/portfolios"><span class="material-symbols-outlined">folder_open</span>Portfolios</a></li>
+        <li><a href="/trade"><span class="material-symbols-outlined">query_stats</span>Market</a></li>
+        <li><a href="/accounts"><span class="material-symbols-outlined">account_balance_wallet</span>Accounts</a></li>
+        <li><a href="#about"><span class="material-symbols-outlined">person</span>Profile</a></li>
       </ul>
 
       <div id="stockBox_id">
@@ -67,6 +67,9 @@
         width: 54%;
         height: 450px;
         border-radius: 20px;
+    }
+    #viewStock_id:hover{
+        background-color: #303030;
     }
 </style>
 
