--- a/public/trade_style.css
+++ b/public/trade_style.css
@@ -3,6 +3,11 @@ body{
       /* background-color: #141413;*/
       margin: 0;
   }
+
+  @font-face {
+    font-family: normalSkrift;
+    src: url(/fonts/Bierstadt.ttf);
+  }
   #topBar_id{
     width: 100%;
     background-color: #5F45A0;
@@ -29,36 +34,43 @@ body{
   }
   
   ul {
-      list-style-type: none;
-      padding: 0;
-      background-color: #252525;
-      margin: 1%;
-      border-radius: 8px;
-      margin-top: 2.5%;
-      float: left;
-    }
+    list-style-type: none;
+    padding: 0;
+    background-color: #252525;
+    margin: 1%;
+    border-radius: 8px;
+    margin-top: 2.5%;
+    float: left;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  
+  .material-symbols-outlined {
+    vertical-align: middle;
+}
+
+  li a 
+  {
+    text-decoration: none;
+    display: block;
+    font-family: normalSkrift;
+    color: lightgray;
+  }
+  li a span{
+    font-size: 100px;
+    display: block;
+    color: lightgray;
+    font-size: 200% !important;
     
-    li a 
-    {
-      text-decoration: none;
-      display: block;
-    }
-    li a span{
-      font-size: 100px;
-      display: block;
-      color: lightgray;
-      font-size: 200% !important;
-      padding-top: 22px;
-      padding-bottom: 22px;
-      padding-left: 13px;
-      padding-right: 13px;
-    }
+    padding-right: 15px;
+    padding-top: 17px;
+    padding-bottom: 17px;
     
-    li a span:hover 
-    {
-      
-      color: white;
-    }
+  }
+
+  li a:hover{
+    color: gray;
+  }
     #stockBox_id{
         width: 37%;
         border: 2px solid lightgray;
