--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -27,20 +27,30 @@
           <div id="totalVærdi_box_id">
             <span>Total værdi</span>
             <hr>
-            <span>1000 kr.</span>
-          
+            <span>
+              <span class="material-symbols-outlined" style="color: limegreen">arrow_upward_alt</span>
+              <span id="totalVærdi_procent_id">5%</span>
+              <span style="float: right;">&nbsp;1000 kr.</span>
+            </span>
           </div>
           
           <div id="totalRealiseretVærdi_box_id">
             <span>Total realiseret værdi</span>
             <hr>
-            <span>500 kr.</span>
+            <span>
+              <span class="material-symbols-outlined" style="color: limegreen">arrow_downward_alt</span>
+              <span id="totalRealiseretVærdi_procent_id">3%</span>
+              <span style="float: right;">&nbsp;500 kr.</span>
+            </span>
           </div>
           
           <div id="totalUrealiseretVærdi_box_id">
             <span>Total urealiseret værdi</span>
             <hr>
-            <span>500 kr.</span>
+            <span>
+              <span class="material-symbols-outlined" style="color: limegreen">arrow_upward_alt</span>
+              <span id="totalUrealiseretVærdi_procent_id">6%</span>
+              <span style="float: right;">&nbsp;300 kr.</span>
           </div>
         </div>
       </div>
@@ -56,14 +66,92 @@
       <div id="top5_boks_id">
         <div id="top5Værdipapirer_tværsAfPorteføljer_id">
           <span>Top 5 værdipapirer på tværs af porteføljer</span>
-          <hr>
-          <font>Sushi</font>
+          <table>
+            <tr>
+              <th>Name</th>
+              <th>Portfolio</th>
+              <th>24h change</th>
+              <th>Value</th>
+            </tr>
+            <tr>
+              <td>Apple Inc.</td>
+              <td>Sushi</td>
+              <td>1.3%</td>
+              <td>12.000 DKK</td>
+            </tr>
+            <tr>
+              <td>Microsoft Cooperation</td>
+              <td>Hamburger</td>
+              <td>1.4%</td>
+              <td>19.000 DKK</td>
+            </tr>
+            <tr>
+              <td>Alhabet Inc.</td>
+              <td>Water</td>
+              <td>1.5%</td>
+              <td>9.000 DKK</td>
+            </tr>
+            <tr>
+              <td>Meta Inc.</td>
+              <td>Bottle of water</td>
+              <td>1.6%</td>
+              <td>10.000 DKK</td>
+            </tr>
+            <tr>
+              <td>Shopify</td>
+              <td>Hamburger</td>
+              <td>3.6%</td>
+              <td>2.000 DKK</td>
+            </tr>
+            
+          </table>
         </div>
         <div id="top5Værdipapirer_urealiseret_id">
           <span>Top 5 værdipapirer på tværs af porteføljer</span>
-          <hr>
-          <font>Hamburger</font>
+          <table>
+            <tr>
+              <th>Name</th>
+              <th>Portfolio</th>
+              <th>24h change</th>
+              <th>Value</th>
+            </tr>
+            <tr>
+              <td>Apple Inc.</td>
+              <td>Sushi</td>
+              <td>1.3%</td>
+              <td>12.000 DKK</td>
+            </tr>
+            <tr>
+              <td>Microsoft Cooperation</td>
+              <td>Hamburger</td>
+              <td>1.4%</td>
+              <td>19.000 DKK</td>
+            </tr>
+            <tr>
+              <td>Alhabet Inc.</td>
+              <td>Water</td>
+              <td>1.5%</td>
+              <td>9.000 DKK</td>
+            </tr>
+            <tr>
+              <td>Meta Inc.</td>
+              <td>Bottle of water</td>
+              <td>1.6%</td>
+              <td>10.000 DKK</td>
+            </tr>
+            <tr>
+              <td>Shopify</td>
+              <td>Hamburger</td>
+              <td>3.6%</td>
+              <td>2.000 DKK</td>
+            </tr>
+            
+          </table>
         </div>
+      </div>
+      <br><br><br>
+      <div>
+
       </div>
 </body>
 </html>
@@ -80,7 +168,7 @@ const currentDate = new Date();
 const datesArray = [];
 
 // Loop from 30 days ago up to the current date
-for (let i = 0; i <= 30; i++) {
+for (let i = 0; i <= 14; i++) {
     const tempDate = new Date();
     tempDate.setDate(currentDate.getDate() - i); // Set the date to be `i` days before today
     datesArray.push(tempDate.toISOString().split('T')[0]); // Add the date to the array in YYYY-MM-DD format
@@ -97,7 +185,7 @@ const flippedArray = datesArray.reverse();
     data: {
       labels: xValues,
       datasets: [{
-        data: [100,121,99,143,130,132,129,154,76,100,121,99,143,130,132,129,154,76,100,121,99,143,130,132,129,154,76,100,129,154,76],
+        data: [1000,1210,990,1430,1300,1320,1290,1540,760,1000,1210,990,1403,1300,1302,1290,1540,760,1000,1210,990,1403,1300,1302,1290,1540,760,1000,1209,1540,760],
         borderColor: "blue",
         fill: false
       }]
@@ -105,10 +193,19 @@ const flippedArray = datesArray.reverse();
     options: 
     {
       legend: {display: false,
-        maintainAspectRatio: false
-      }
+      },
+      maintainAspectRatio: false,
+      responsive: true,
       
-    }
+      scales:
+      {
+        yAxes: [{
+            ticks: {
+                beginAtZero: true
+            }
+        }]
+        }
+      }
   });
 
   new Chart("myChart2", 
