--- a/views/trade.ejs
+++ b/views/trade.ejs
@@ -16,9 +16,9 @@
     </div>
 
     <ul>
-        <li><a href="/dashboard" style="color: gray;"><span class="material-symbols-outlined" style="color: gray;">dashboard</span>Dashboard</a></li>
+        <li><a href="/dashboard"><span class="material-symbols-outlined">dashboard</span>Dashboard</a></li>
         <li><a href="/portfolios"><span class="material-symbols-outlined">folder_open</span>Portfolios</a></li>
-        <li><a href="/trade"><span class="material-symbols-outlined">query_stats</span>Market</a></li>
+        <li><a href="/trade" style="color: gray;"><span class="material-symbols-outlined" style="color: gray;">query_stats</span>Market</a></li>
         <li><a href="/accounts"><span class="material-symbols-outlined">account_balance_wallet</span>Accounts</a></li>
         <li><a href="#about"><span class="material-symbols-outlined">person</span>Profile</a></li>
       </ul>
