--- a/public/style.css
+++ b/public/style.css
@@ -22,6 +22,7 @@ h1{
     margin: 0;
     font-family: Bahnschrift;
     padding: 0.8%;
+    padding-bottom: 0.85%;
     font-weight: normal;
 }
 #topBar_goBack_id{
