--- a/public/accounts_style.css
+++ b/public/accounts_style.css
@@ -1,55 +1,76 @@
 body{
     margin: 0;
-    background-color: black;
+    background-color: #121212;
     color: lightgray;
 }
+@font-face {
+  font-family: normalSkrift;
+  src: url(/fonts/Bierstadt.ttf);
+}
 #topBar_id{
-    width: 100%;
+  width: 100%;
+  background-color: #5F45A0;
+  display: block;
+  position: relative;
+}
+h1{
+    display: inline-block;
     background-color: #5F45A0;
-    display: block;
-    position: relative;
-  }
-  h1{
-      display: inline-block;
-      background-color: #5F45A0;
-      color: white;
-      margin: 0;
-      font-family: Bahnschrift;
-      padding: 0.8%;
-      font-weight: normal;
-  }
-
-  ul {
-    list-style-type: none;
-    padding: 0;
-    background-color: #252525;
-    margin: 1%;
-    border-radius: 8px;
-    margin-top: 2.5%;
-    float: left;
-  }
-  
-  li a 
-  {
-    text-decoration: none;
-    display: block;
-  }
-  li a span{
-    font-size: 100px;
-    display: block;
-    color: lightgray;
-    font-size: 200% !important;
-    padding-top: 22px;
-    padding-bottom: 22px;
-    padding-left: 13px;
-    padding-right: 13px;
-  }
-  
-  li a span:hover 
-  {
-    
     color: white;
-  }
+    margin: 0;
+    font-family: Bahnschrift;
+    padding: 0.8%;
+    font-weight: normal;
+}
+#topBar_goBack_id{
+  display: inline;
+  color: white;
+  position: absolute;
+    top: 50%;
+    right: 0; /* Placerer elementet til højre */
+    transform: translateY(-50%);
+    font-size: 200%;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  background-color: #252525;
+  margin: 1%;
+  border-radius: 8px;
+  margin-top: 2.5%;
+  float: left;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.material-symbols-outlined {
+  vertical-align: middle;
+}
+
+li a 
+{
+  text-decoration: none;
+  display: block;
+  font-family: normalSkrift;
+  color: lightgray;
+}
+li a span{
+  font-size: 100px;
+  display: block;
+  color: lightgray;
+  font-size: 200% !important;
+  
+  padding-right: 15px;
+  padding-top: 17px;
+  padding-bottom: 17px;
+  
+}
+
+li a:hover, 
+li a:hover span {
+color: gray;
+}
   #stockBox_id{
       width: 37%;
       border: 2px solid lightgray;
