--- a/views/accounts.ejs
+++ b/views/accounts.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -8,20 +7,19 @@
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
-<header>
-  <div id="topBar_id">
-    <h1>PORTFOLIOTRACKER</h1>
-  </div>
-</header>
 
 <body>
-  <ul>
-    <li><a href="/dashboard"><span class="material-symbols-outlined">dashboard</span></a></li>
-    <li><a href="/portfolios"><span class="material-symbols-outlined">folder_open</span></a></li>
-    <li><a href="/trade"><span class="material-symbols-outlined">query_stats</span></a></li>
-    <li><a href="/accounts"><span class="material-symbols-outlined"
-          style="color: gray;">account_balance_wallet</span></a></li>
-    <li><a href="#about"><span class="material-symbols-outlined">person</span></a></li>
+  <div id="topBar_id">
+    <h1>PORTFOLIOTRACKER</h1>
+    <span class="material-symbols-outlined" id="topBar_goBack_id">home</span>
+</div>
+
+<ul>
+    <li><a href="/dashboard"><span class="material-symbols-outlined">dashboard</span>Dashboard</a></li>
+    <li><a href="/portfolios"><span class="material-symbols-outlined">folder_open</span>Portfolios</a></li>
+    <li><a href="/trade"><span class="material-symbols-outlined">query_stats</span>Market</a></li>
+    <li><a href="/accounts" style="color: gray;"><span class="material-symbols-outlined" style="color: gray;">account_balance_wallet</span>Accounts</a></li>
+    <li><a href="#about"><span class="material-symbols-outlined">person</span>Profile</a></li>
   </ul>
   <script>
     document.getElementById("userId").value = localStorage.getItem("userId");
