--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -14,6 +14,8 @@
         <span class="material-symbols-outlined" id="topBar_goBack_id">home</span>
     </div>
 
+    
+
     <ul>
         <li><a href="/dashboard" style="color: gray;"><span class="material-symbols-outlined" style="color: gray;">dashboard</span>Dashboard</a></li>
         <li><a href="/portfolios"><span class="material-symbols-outlined">folder_open</span>Portfolios</a></li>
@@ -21,8 +23,10 @@
         <li><a href="/accounts"><span class="material-symbols-outlined">account_balance_wallet</span>Accounts</a></li>
         <li><a href="#about"><span class="material-symbols-outlined">person</span>Profile</a></li>
       </ul>
+
       
       <div id="bodyIndholdContainer_id">
+        <h2>Dashboard</h2>
         <div id="container_værdier_id">
           <div id="totalVærdi_box_id">
             <span>Total værdi</span>
@@ -59,7 +63,7 @@
       <div id="samletVærdi_boks_id">
         <span>Samlet værdi</span>
         <hr>
-        <canvas id="myChart" style=""></canvas>
+        <canvas id="myChart"></canvas>
       </div>
 
       <!-- Top 5 værdipapirer -->
